tests/models/enum/named/f64/fail/min_length.rs
use dade::model;
#[model]
enum TestModel {
    Value {
        #[field(min_length = 2)]
        value: f64
    },
}
fn main() {}
